// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox allows setting props on label 1`] = `
<label
  aria-label="custom label"
  className="sc-bczRLJ brUlbM"
>
  <input
    className="sc-gsnTZi gDsstp"
    type="checkbox"
  />
  Click Me
</label>
`;

exports[`Checkbox handles options 1`] = `
<label
  className="sc-bczRLJ brUlbM"
>
  <input
    className="sc-gsnTZi gDsstp"
    type="checkbox"
  />
  Click Me
</label>
`;

exports[`Checkbox matches snapshot 1`] = `
<label
  className="sc-bczRLJ gtxOzv"
>
  <input
    className="sc-gsnTZi bBmYov"
    type="checkbox"
  />
  Click Me
</label>
`;
